--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     font-size: 16px;
     line-height: 1.5em;
     color: rgb(41, 39, 39);
-    background-color: black;
+    background-color: #b3f0ff;
 }
 
 /*Links*/
