--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ h3 {
     padding-top: 50px;
     padding-bottom: 125px;
     background-color: #b3f0ff;
+    background: url(../img/flowme.svg) no-repeat center center;
 }
 
 #about img {
