--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Sue Ellen Francisco', cursive;
     /*font-weight: 400;*/
 }
 
