--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 
 a {
     /*    Set the link in color */
-    color:  #008fb3;
+    color:  #b3f0ff;
     /*    Set a transition in colors for links*/
     -webkit-transition: 300ms;
     -moz-transition: 300ms;
@@ -129,6 +129,7 @@ h3 {
 .btn {
 
     background-color: white;
+    font-family:'Sue Ellen Francisco', cursive;
     border: none;
     /*    border: 2px solid black;*/
     padding: 5px 10px 5px 10px;
@@ -162,6 +163,7 @@ h3 {
 #portfolio h1{
     color: white;
     text-align: center;
+    font-family:'Sue Ellen Francisco', cursive;
 
 }
 
@@ -215,6 +217,7 @@ h3 {
     text-align: center;
     font-size: 20px;
     color: #f7f6ef;
+    font-family:'Sue Ellen Francisco', cursive;
 }
 
 
@@ -255,9 +258,11 @@ h3 {
     box-shadow: none;
     /*Change the background-color*/
     background-color: rgba(33, 32, 32, 0.9);
+    font-family:'Sue Ellen Francisco', cursive;
 }
 
 .portfolio-modal .modal-content h2 {
+    font-family: 'Roboto', sans-serif;
     margin-top: 10px;
     margin-bottom: 30px;
     font-size: 3em;
@@ -382,12 +387,12 @@ progress::-moz-progress-bar {
 #contact h2 {
     color: white;
     font-family: 'Sue Ellen Francisco', cursive;
-    font-size: 35px;
+    font-size: 45px;
 
 }
 
 #contact h3 {
-    font-size: 3.5em;
+    font-size: 20px;
     color: white;
     font-family: 'Sue Ellen Francisco', cursive;
 
