--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,8 @@ h3 {
 #about {
     padding-top: 300px;
     padding-bottom: 305px;
-    padding-left: 150px;
     background-color: #b3f0ff;
-    background: url(../img/flowme.svg) no-repeat center center;
+    background: url(../img/flowme.svg) no-repeat center;
     background-size: cover;
 }
 
@@ -258,11 +257,11 @@ h3 {
     box-shadow: none;
     /*Change the background-color*/
     background-color: rgba(33, 32, 32, 0.9);
-    font-family:'Sue Ellen Francisco', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 
 .portfolio-modal .modal-content h2 {
-    font-family: 'Roboto', sans-serif;
+    font-family:'Sue Ellen Francisco', cursive;
     margin-top: 10px;
     margin-bottom: 30px;
     font-size: 3em;
@@ -342,7 +341,6 @@ h3 {
     left: 2%;
     position: relative;
     font-size: 15px;
-    font-weight: bolder;
     font-family: 'Roboto', sans-serif;
     color: black;
 }
