--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ h3 {
 /*about section*/
 #about {
     background-color: #b3f0ff;
-    background: url(../img/flowme.svg) no-repeat center center;
+    /*background: url(../img/flowme.svg) no-repeat center center;*/
     background-size: cover;
     padding-bottom: 200px;
     padding-top: 350px;
