--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ h3 {
     background: url(../img/head.svg) no-repeat center center;
     background-size: cover;
     /*The padding for bottom and top settings will expand the height of header area*/
-    padding-bottom: 300px;
+    padding-bottom: 200px;
     padding-top: 350px;
 }
 
@@ -110,12 +110,13 @@ h3 {
     background-color: #b3f0ff;
     /*background: url(../img/flowme.svg) no-repeat center center;*/
     background-size: cover;
-    padding-bottom: 200px;
-    padding-top: 350px;
+    padding-bottom: 50px;
+    padding-top: 200px;
 }
 
 #about img {
     margin-top: 10px;
+    height: 200px;
 }
 
 #about h2 {
